-- moved normal_mask out of flow into inspector policy
-- patched around flow key issue with icmp ipproto vs pkt type
-- changed builtin rules to rev:1; priority:3;
-- update from Josh to fix codec FPs
-- added REG_TEST support for -N (ignored) and -A console (alert_fast)
-- tweaked alert_fast whitespace
-- fixed stream is-paf? bug
-- set default id and priority based on class

125
-- discovered can't catch exceptions thrown from Lua to C++; need to
   build liblua differently
-- changed most static const char* s to #define s or static const char*
   const s
-- updated style guide - please read and follow or comment on it!
-- silenced bogus -O2 warnings
-- updated ChangeLog terms; added env vars
-- latest from Tom
-- minor doc updates
-- converted fast pattern errors to warnings
-- add check for null gadget in binder
-- remove cruft from fast pattern config
-- updates from tom and josh
-- renamed doc/tips.txt to doc/start.txt for users getting started
-- added doc/features.txt for configure features that must be explicitly
   enabled
-- added --enable-shell and BUILD_SHELL to opt in to --shell and -j
   functionality
-- latest snort2lua updates from Josh
-- added cursor to so:eval function to match IpsOption::eval()
-- added --rule-to-hex and --rule-to-text to generate protected and
   unprotected so rules
-- latest from tom
-- fixed explicit stream_* bindings
-- latest from josh - snort2lua changes
-- added override to most derived virtual declarations
-- update from josh
-- adding sid_18758.h back to extra/src/so_rules/ so that makes work
-- fixed enum, select, and multi validation
-- fixed some bogus semantic warnings from xcode
-- update from josh
-- updated doc

124
-- valgrind cleanup
-- fixed incorrect casting of ftp, ftp-data, and telnet flow data
-- fixed reload_config()
-- tweak error for x = { 1 } where x is a table not a list
-- some make distcheck fixes (still broken)
-- changed version to 2.10.0 and build to 123