@@ -73,9 +73,10 @@ using namespace std;
 #define STREAM_TCP_NO_3WHS_STR \
     "TCP session without 3-way handshake"
 
+// sequence must match STREAM_POLICY_* and REASSEMBLY_POLICY_* defines
 #define policies \
-    "first | last | bsd | linux | old-linux | windows | win-2003 | vista | " \
-    "solaris | hpux | hpux10 | irix | macos"
+    "first | last | linux | old-linux | bsd | macos | solaris | irix | " \
+    "hpux | hpux10 | windows | win-2003 | vista"
 
 static const Parameter stream_tcp_small_params[] =
 {
